[gd_scene load_steps=2 format=3 uid="uid://du58xggkldm0t"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_by5xy"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_by5xy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Settings" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 610.0
offset_top = 250.0
offset_right = 1671.0
offset_bottom = 807.0
scale = Vector2(0.7, 0.7)

[node name="fullscreen" type="CheckButton" parent="CanvasLayer/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Fullscreen"

[node name="resolution" type="OptionButton" parent="CanvasLayer/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 75

[node name="Return" type="Button" parent="CanvasLayer/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Return"

[node name="Main" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 790.0
offset_top = 250.0
offset_right = 1323.0
offset_bottom = 706.0
scale = Vector2(0.75, 0.75)

[node name="Return" type="Button" parent="CanvasLayer/Main"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Return"

[node name="Save" type="Button" parent="CanvasLayer/Main"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Save"

[node name="Settings" type="Button" parent="CanvasLayer/Main"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/Main"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Quit"

[connection signal="toggled" from="CanvasLayer/Settings/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="item_selected" from="CanvasLayer/Settings/resolution" to="." method="_on_resolution_item_selected"]
[connection signal="pressed" from="CanvasLayer/Settings/Return" to="." method="settings_return"]
[connection signal="pressed" from="CanvasLayer/Main/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/Quit" to="." method="_on_quit_pressed"]
